--- a/ProyectoTBD1/nbproject/private/private.properties
+++ b/ProyectoTBD1/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
-user.properties.file=/home/didiermurillo/.netbeans/8.2/build.properties
+file.reference.mysql-connector-java-5.1.39-bin.jar=/home/lana/Documents/DB1/DDB2P/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar-1=/home/lana/Documents/DB1/DDB2P/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
+user.properties.file=/home/lana/.netbeans/8.1/build.properties
