--- a/ProyectoTBD1/nbproject/project.properties
+++ b/ProyectoTBD1/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.39-bin.jar=../../Escritorio/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar-1=../../mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar-2=../mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.39-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
