--- a/ProyectoTBD1/nbproject/project.properties
+++ b/ProyectoTBD1/nbproject/project.properties
@@ -35,7 +35,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.39-bin.jar-2}
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar-2}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
