--- a/ProyectoTBD1/nbproject/project.properties
+++ b/ProyectoTBD1/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoTBD1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mail.jar=../../javamail-1.4.7/mail.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar=../../Escritorio/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar-1=../../mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar-2=../mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
@@ -36,7 +37,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar-2}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
