--- a/ProyectoTBD1/nbproject/private/private.properties
+++ b/ProyectoTBD1/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
 file.reference.mysql-connector-java-5.1.39-bin.jar=/home/lana/Documents/DB1/DDB2P/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar-1=/home/lana/Documents/DB1/DDB2P/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
-user.properties.file=/home/gabriel/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\Gabriel\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
