--- a/ProyectoTBD1/nbproject/project.properties
+++ b/ProyectoTBD1/nbproject/project.properties
@@ -27,6 +27,8 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoTBD1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mail.jar=../../javamail-1.4.7/mail.jar
+file.reference.mail.jar-1=C:\\Users\\Gabriel\\Desktop\\pusheado\\3\\DDB2P-master\\mail.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar=../../Escritorio/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar-1=../../mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar-2=../mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar
@@ -35,7 +37,10 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.39-bin.jar-2}
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar-2}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
